Changing naming strategy

--- a/code/Fig1_RNASeq_Heatmap_FCplots.Rmd
+++ b/code/Fig1_RNASeq_Heatmap_FCplots.Rmd
@@ -313,7 +313,7 @@ clustmsigdb <- t(clustmsigdb)
 clustmsigdb <- clustmsigdb[order(clustmsigdb[,1]),]
 
 
-pheatmap(mat = clustmsigdb, scale = "none", cluster_cols = F, border_color = "black",  clustering_distance_rows = "euclidean", clustering_method = "complete", color = viridis(10, option = "E", direction = 1), filename = here("plots","BP_up_down.pdf"), width = 40, height = 10, fontsize = 24)
+pheatmap(mat = clustmsigdb, scale = "none", cluster_cols = F, border_color = "black",  clustering_distance_rows = "euclidean", clustering_method = "complete", color = viridis(10, option = "E", direction = 1), filename = here("plots","Fig1_HeatmapBP.pdf"), width = 40, height = 10, fontsize = 24)
 
 
 ```
